# symb0l

./: .eslintrc.cjs  .gitignore  .mise.toml  .prettierrc  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE-APACHE  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: update-game.yml
apps/api/: ARCHITECTURE.md  CHANGELOG.md  README.md  api-version.json  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts  server.ts
apps/api/src/config/: api-version.config.ts  api-version.data.ts  api-version.schema.ts  minor-alias.test.ts  versions.config.test.ts  versions.config.ts  versions.config.validation.test.ts
apps/api/src/plugins/: di.plugin.ts  listing-service-plugin.ts  quote-service-plugin.ts  repository-plugin.ts  routes.plugin.ts  setup.plugin.ts  swagger.plugin.ts  version-headers.plugin.ts  version-headers.test.ts  version-resolver.plugin.ts  (+1 more)
apps/tui/: Cargo.toml
apps/tui/src/: api.rs  app.rs  event.rs  filter.rs  main.rs  ui.rs
doc/: DATABASE.md  TESTING.md
doc/diagrams/: data_model.puml
src/: db.test.ts  db.ts  index.test.ts  index.ts
src/seeds/: asset_class_levels.ts  countries.ts  country_exposures.ts  currencies.integration.test.ts  currencies.ts  exchanges.integration.test.ts  exchanges.ts  index.ts  instruments.ts  listings.ts  markets.integration.test.ts  markets.ts  resolvers.ts  risk_levels.ts  sectors.ts  seeder.ts
src/seeds/lib/: SeederBuilder.test.ts  SeederBuilder.ts  resolvers.test.ts  resolvers.ts  seeder.test.ts  seeder.ts
src/tools/: compile-diagrams.ts
(+29 files in other folders)
