[package]
name = "symb0l-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for the Symb0l financial instruments database"

[[bin]]
name = "symb0l-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
